prusti-tests/tests/verify_safe_clients/fail/libraries/mod.rs
// ignore-test This is part of a module
#![feature(try_trait_v2)]
#![feature(allocator_api)]

mod lib_prusti;
mod lib_vec;
mod lib_controlflow;
mod lib_option;
mod lib_result;
mod lib_box;
mod lib_cell;
mod lib_refcell;
mod lib_refcell_ref;
mod lib_refcell_refmut;
mod lib_arc;
mod lib_rc;
mod lib_mutex;
mod lib_mutex_guard;
mod lib_rwlock;
mod lib_rwlock_readguard;
mod lib_rwlock_writeguard;
mod lib_atomic;
mod lib_unsafecell;

pub use lib_prusti::*;
pub use lib_vec::*;
pub use lib_controlflow::*;
pub use lib_option::*;
pub use lib_result::*;
pub use lib_box::*;
pub use lib_cell::*;
pub use lib_refcell::*;
pub use lib_refcell_ref::*;
pub use lib_refcell_refmut::*;
pub use lib_arc::*;
pub use lib_rc::*;
pub use lib_mutex::*;
pub use lib_mutex_guard::*;
pub use lib_rwlock::*;
pub use lib_rwlock_readguard::*;
pub use lib_rwlock_writeguard::*;
pub use lib_atomic::*;
pub use lib_unsafecell::*;
